# hcc2

./: DEVELOPMENT.md  README.md
examples/cloc/: README.md
examples/cloc/vector_copy/: README.md
examples/cloc/vector_copy_cuda/: README.md  vector_copy.cu
examples/cuda-open/matrixmul/: Makefile  matrixmul.cu
examples/cuda-open/vectorAdd/: Makefile  vectorAdd.cu
examples/cuda-open/writeIndex/: Makefile  writeIndex.cu
examples/cuda/matrixmul/: Makefile
examples/cuda/vectorAdd/: Makefile
examples/cuda/writeIndex/: Makefile
examples/cudaclang/: README.md
examples/cudaclang/matrixmul/: Makefile  matrixmul.cu
examples/cudaclang/vectorAdd/: Makefile  vectorAdd.cu
examples/hip/: README.md
examples/hip/matrixmul/: matrixmul.cpp
examples/hip/vectorAdd/: Makefile  vectorAdd.cpp
examples/hip/writeIndex/: writeIndex.cpp
examples/hip/writeIndex_amode/: Makefile  writeIndex.cpp
examples/libdevice/: README.md
examples/libdevice/libm/: Makefile  libm-amdgcn.c  libm-amdgcn.cpp  libm-amdgcn.h  libm-nvptx.c  libm-nvptx.cpp  libm.c  libm.cpp
examples/openmp/: Makefile  Makefile.defs  Makefile.rules  README  README.md  STATUS
examples/openmp/DeclareSharedMemory/: Makefile
examples/openmp/assertok_error/: Makefile  assertok_error.c
examples/openmp/atomic/: Makefile
examples/openmp/class/: Makefile
examples/openmp/collapse/: Makefile
examples/openmp/devices/: Makefile  devices.c
examples/openmp/firstprivate/: Makefile
examples/openmp/function/: Makefile
examples/openmp/helloworld/: Makefile
examples/openmp/nativetests/: Makefile  nativetests.c
examples/openmp/pfspecifier/: Makefile
examples/openmp/reduce/: Makefile
examples/openmp/reduction/: Makefile
examples/openmp/schedule/: Makefile  schedule.c
examples/openmp/simd/: Makefile
examples/openmp/stream/: Makefile
examples/openmp/target-in-other-source/: Makefile
examples/openmp/teams/: Makefile
examples/openmp/test/: Makefile
examples/openmp/threads/: Makefile
examples/openmp/veccopy/: Makefile  veccopy.c
examples/openmp/vmuldemo/: Makefile
examples/openmp/vmulsum/: Makefile
examples/test/: Makefile.defs
examples/test/reduction/: reduction.c
fixes/: README  rocdl.patch
hc/: CMakeLists.txt
hc/hcc_config/: CMakeLists.txt  hcc_config.cpp  hcc_config.hxx.in
hc/include/: CMakeLists.txt
hc/include/experimental/: CMakeLists.txt
hc/lib/: CMakeLists.txt
hc/scripts/cmake/: MCWAMP.cmake
test/: Makefile  Makefile.defs  Makefile.rules
test/cuda-open/math_double/: math_double.cu
test/cuda-open/math_float/: math_float.cu
test/omptests/: omptests_run.sh
test/smoke/: Makefile  Makefile.defs  Makefile.rules
test/smoke/devices/: devices.c
test/smoke/function_overload/: Makefile  function_overload.cpp
test/smoke/function_template/: Makefile
test/smoke/issue_apps_001/: Makefile
test/smoke/liba_bundled/: Makefile  Makefile.init  liba_init.sh  main.c
test/smoke/math_sqrt_float/: Makefile
test/smoke/pfspecifier_str/: pfspecifier_str.c
test/smoke/simple_matrix_dyn_array/: simple_matrix_dyn_array.h
test/smoke/stream/: Makefile
utils/: CMakeLists.txt
utils/src/: prepare-builtins.cpp
